fix OnEnter items alignment

--- a/src/bp/ui-studio/src/web/views/FlowBuilder/nodeProps/style.scss
+++ b/src/bp/ui-studio/src/web/views/FlowBuilder/nodeProps/style.scss
@@ -199,3 +199,8 @@ h5 {
 .actionServer {
   margin: 5px 6px 0 0;
 }
+
+.actionList {
+  display: flex;
+  flex-direction: column;
+}
